--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "13.5.6",
     "next-navigation": "^1.0.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/node": "^20",
