--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^10.5.2",
+    "firebase": "^10.6.0",
     "next": "13.5.6",
     "next-navigation": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
