--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "firebase": "^10.7.0",
-    "next": "13.5.6",
+    "next": "^14.0.3",
     "next-navigation": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
