--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "eslint": "^9.19.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
