--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@stripe/stripe-js": "^5.6.0",
-    "canvas-confetti": "^1.9.3",
     "firebase": "^10.7.0",
     "firebase-admin": "^13.1.0",
     "lucide-react": "^0.475.0",
@@ -21,8 +19,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-toastify": "^11.0.3",
     "sharp": "^0.33.5",
-    "stripe": "^17.6.0",
-    "typewriter-effect": "^2.21.0"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
